--- a/templates/layout.html
+++ b/templates/layout.html
@@ -95,6 +95,8 @@
     <p>New to Bootstrap? <a href="https://getbootstrap.com/">Visit the homepage</a> or read our <a href="/docs/4.5/getting-started/introduction/">getting started guide</a>.</p>
     se quita likns a bootstrap
     -->
+    <p>Todos los Derechos Reservados</p>
+    <p>Luck_pher</p>
   </div>
 </footer>
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
